# vgrep

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.server  LICENSE  README.md  clippy.toml  rustfmt.toml
.githooks/: pre-push
.github/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
PROJECTS/temp_GPwZUTbc/src/bench/: session.rs
PROJECTS/temp_MgJzAfQC/src/core/: embeddings.rs
PROJECTS/temp_OyxntaIU/src/bench/: external_agent.rs
PROJECTS/temp_RFPocVNt/src/server/: api.rs
PROJECTS/temp_Term55Val/src/container/: backend.rs
PROJECTS/temp_VGrepidx/src/core/: search.rs
PROJECTS/temp_VGrepidx/src/server/: api.rs
PROJECTS/temp_VGrepidx/src/ui/: search_tui.rs
PROJECTS/temp_WHcBFaDU/src/client/: http.rs  http_test.rs  mod.rs
PROJECTS/temp_WHcBFaDU/src/container/: backend.rs
PROJECTS/temp_kxombpun/: .dockerignore  .gitmodules  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.agent  LICENSE  README.md  docker-compose.yml  registry.json  release-please-config.json
PROJECTS/temp_kxombpun/.githooks/: install.sh  pre-commit  pre-push
PROJECTS/temp_kxombpun/.github/: ci-trigger
PROJECTS/temp_kxombpun/.github/workflows/: release.yml
PROJECTS/temp_kxombpun/checkpoints/: checkpoint1.json  checkpoint2.json
PROJECTS/temp_kxombpun/docker/: Dockerfile.base  Dockerfile.compiler
PROJECTS/temp_kxombpun/docs/: architecture.md  migration-guide.md
PROJECTS/temp_kxombpun/docs/miner/: agent-development.md  getting-started.md  sdk-reference.md  submission.md
PROJECTS/temp_kxombpun/docs/reference/: api-reference.md  cli-reference.md  protocol.md  scoring.md
PROJECTS/temp_kxombpun/docs/validator/: operation.md  setup.md  troubleshooting.md
PROJECTS/temp_kxombpun/migrations/: 001_initial_schema.sql  002_add_api_keys_and_versioning.sql  003_add_epoch_submission_limit.sql  004_validator_assignments.sql  005_task_logs.sql  006_agent_binary.sql  007_verbose_logs.sql  008_llm_usage.sql  009_validator_assignment_status.sql  010_reassignment_tracking.sql  011_package_submissions.sql  014_validator_readiness.sql  015_public_code_visibility.sql  016_disable_decay.sql  017_forced_weights.sql  018_task_retry_tracking.sql  019_checkpoint_system.sql  README.md
PROJECTS/temp_kxombpun/scripts/: setup-hooks.sh
PROJECTS/temp_kxombpun/sdk/: README.md
PROJECTS/temp_kxombpun/sdk/python/: README.md  pyproject.toml
PROJECTS/temp_kxombpun/sdk/python/term_sdk/: __init__.py  agent.py  llm.py  packager.py  runner.py  types.py
PROJECTS/temp_kxombpun/sdk/python/tests/: __init__.py  test_agent.py  test_llm.py  test_sdk.py  test_types.py
PROJECTS/temp_kxombpun/src/: lib.rs
PROJECTS/temp_kxombpun/src/admin/: config.rs  mod.rs  sudo.rs
PROJECTS/temp_kxombpun/src/agent/: mod.rs  registry.rs  review.rs  submission.rs
PROJECTS/temp_kxombpun/src/api/: errors.rs  handlers.rs  mod.rs  state.rs  types.rs
PROJECTS/temp_kxombpun/src/bench/: agent.rs  binary_agent.rs  environment.rs  external_agent.rs  in_container_agent.rs  llm.rs  mod.rs  registry.rs  results.rs  runner.rs  session.rs  task.rs  verifier.rs
PROJECTS/temp_kxombpun/src/cache/: metagraph.rs  mod.rs
PROJECTS/temp_kxombpun/src/chain/: block_sync.rs  epoch.rs  evaluation.rs  mod.rs
PROJECTS/temp_kxombpun/src/client/: mod.rs  traits.rs
PROJECTS/temp_kxombpun/src/container/: backend.rs  compiler.rs  docker.rs  mod.rs
PROJECTS/temp_kxombpun/src/core/: compat.rs  config.rs  mod.rs  prelude.rs  result.rs  types.rs
PROJECTS/temp_kxombpun/src/crypto/: api_key.rs  auth.rs  mod.rs  ss58.rs  x25519.rs
PROJECTS/temp_kxombpun/src/evaluation/: evaluator.rs  mod.rs  orchestrator.rs  pipeline.rs  progress.rs
PROJECTS/temp_kxombpun/src/server/: mod.rs
PROJECTS/temp_kxombpun/src/storage/: chain.rs  local.rs  migrations.rs  mod.rs  pg.rs  traits.rs
PROJECTS/temp_kxombpun/src/task/: challenge.rs  config.rs  harness.rs  mod.rs  registry.rs  types.rs
PROJECTS/temp_kxombpun/src/util/: encoding.rs  hash.rs  hotkey.rs  memory.rs  mod.rs  timestamp.rs
PROJECTS/temp_kxombpun/src/validation/: code_visibility.rs  mod.rs  package.rs  whitelist.rs
PROJECTS/temp_kxombpun/src/weights/: decay.rs  distribution.rs  mod.rs  (+3 more)
docker/: agent_runner.py
docs/: getting-started.md
docs/agent-development/: overview.md  python.md  rust.md
examples/: grok_agent.py
migrations/: 012_manual_validation.sql  013_cancellation_history.sql
scripts/: setup-hooks.ps1  setup-hooks.sh
sdk/: README.md
sdk/examples/python/: advanced_agent.py  llm_agent.py
sdk/python/: README.md
sdk/python/term_sdk/: __init__.py  agent.py  llm.py  runner.py  types.py
sdk/python/tests/: test_sdk.py
sdk/rust/: README.md
sdk/rust/src/: lib.rs  llm.rs  runner.rs  types.rs
sdk/typescript/: README.md
sdk/typescript/src/: index.ts
src/: agent_queue.rs  agent_registry.rs  agent_submission.rs  api.rs  assignment_monitor.rs  blockchain_evaluation.rs  central_client.rs  chain_storage.rs  challenge.rs  compiler.rs  config.rs  container_backend.rs  evaluation_orchestrator.rs  evaluation_pipeline.rs  evaluator.rs  lib.rs  llm_client.rs  llm_review.rs  main.rs  migrations.rs  pg_storage.rs  proposal_manager.rs  rpc.rs  scoring.rs  secure_submission.rs  server.rs  subnet_control.rs  sudo.rs  task.rs  task_stream_cache.rs  terminal_harness.rs  time_decay.rs  validator_worker.rs  watcher.rs
src/admin/: subnet.rs
src/api/: handlers.rs
src/bench/: binary_agent.rs  environment.rs  external_agent.rs  in_container_agent.rs  mod.rs  registry.rs  runner.rs  session.rs  task.rs
src/cli/: commands.rs  install.rs  interactive.rs  mod.rs
src/core/: db.rs  db_test_injection.rs  db_test_wildcard.rs  embeddings.rs  index_filter.rs  indexer.rs  mod.rs  search.rs
src/server/: api.rs  client.rs  mod.rs  server.rs
src/storage/: chain.rs  local.rs  migrations.rs
src/storage/postgres/: evaluations.rs  leaderboard.rs  submissions.rs  task_logs.rs  validators.rs
src/ui/: console.rs  mod.rs  search_tui.rs
tests/: integration_terminus2.rs  integration_tests.rs  live_evaluation_test.rs  terminal_bench_integration.rs
(+70 files in other folders)
