[package]
name = "term-challenge"
version = "0.1.0"
edition = "2021"
description = "Terminal Benchmark Challenge - AI agents compete on terminal tasks"
authors = ["Platform Network"]
license = "Apache-2.0"
repository = "https://github.com/PlatformNetwork/term-challenge"

[[bin]]
name = "term"
path = "bin/term/main.rs"

[[bin]]
name = "term-server"
path = "bin/server/main.rs"

[[bin]]
name = "term-sudo"
path = "src/bin/term-sudo.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.40", features = ["full", "process"] }
async-trait = "0.1"
futures = "0.3"

# WebSocket client for central API connection
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Docker interaction
bollard = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Utils
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
bs58 = "0.5"
blake2 = "0.10"
rand = "0.8"
regex = "1.10"
base64 = "0.22"

# Sr25519 crypto (Substrate/Bittensor standard)
sp-core = { version = "31.0", default-features = false, features = ["std"] }
schnorrkel = "0.11"

# Local SQLite storage for validators (replaces distributed P2P storage)
rusqlite = { version = "0.32", features = ["bundled"] }

# PostgreSQL for server mode (central challenge storage)
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
postgres-types = { version = "0.2", features = ["derive"] }

# Encryption for API keys
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error monitoring (optional - enabled via SENTRY_DSN env var)
sentry = { version = "0.35", default-features = false, features = ["backtrace", "contexts", "tracing", "reqwest", "rustls"] }
sentry-tracing = "0.35"

# HTTP for agent communication and RPC
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["json", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Ordered map for LRU cache
indexmap = "2.2"

# Temp files
tempfile = "3.12"

# Concurrency
parking_lot = "0.12"
once_cell = "1.19"

# Secure container runtime (from platform)
secure-container-runtime = { git = "https://github.com/PlatformNetwork/platform.git", rev = "1db95e6c7aeccfa3e21100fdd7011f6fb083cf1d" }

# Compression for binary distribution and Docker builds
flate2 = "1.0"
tar = "0.4"

# Directories for cache
dirs = "5.0"

# Interactive CLI prompts
dialoguer = { version = "0.11", features = ["password"] }
console = "0.15"
indicatif = "0.17"
colored = "2.1"
comfy-table = "7.1"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
