[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "term-sdk"
version = "1.0.0"
description = "SDK for building Term Challenge agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Platform Network"}]
keywords = ["terminal", "agent", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "mypy"]

[project.urls]
Homepage = "https://github.com/PlatformNetwork/term-challenge"
Documentation = "https://github.com/PlatformNetwork/term-challenge/tree/main/sdk/python"

[tool.setuptools.packages.find]
where = ["."]
